# crew-bus

./: .gitignore  CLAUDE.md  CREW_CHARTER.md  CrewBus.mcpb  INTEGRITY.md  LICENSE  README.md  __init__.py  agent_bridge.py  agent_worker.py  bus.py  cli.py  conftest.py  crew_bus_mcp.py  dashboard.py  delivery.py  discord_bridge.py  email_formatter.py  feedback_collector.py  index.html  install.sh  instructor.py  leonardo_bridge.py  manifest.json  pyproject.toml  pytest.ini  reddit_bridge.py  requirements.txt  right_hand.py  run_dashboard.sh  security.py  server.json  skill_sandbox.py  skill_store.py  telegram_bridge.py  test_agent_worker.py  test_connect_claude.py  test_crew_bus_mcp.py  test_dashboard.py  test_day2.py  (+24 more)
.claude/: settings.json
CrewBusKit/: Package.swift
agents/: package.json  review.ts
configs/: example_stack.yaml  team_templates.json
deploy/: backup.sh  crew-bus.service  nginx.conf  setup.sh
docs/: anthropic-directory-submission.md
examples/: artist-passion-crew.yaml  family-crew.yaml  launch-crew.yaml  teen-crew.yaml
ios/: project.yml
macos/: appcast.xml  project.yml
public/: 404.html  500.html  hero-demo-animation.html  index.html  robots.txt  sitemap.xml
relay/: README.md  auth-handler.ts  mcp-handler.ts  oauth.ts  package-lock.json  package.json  tsconfig.json  tunnel.ts  worker.ts  wrangler.toml
scripts/: build-crewbus-dmg.sh  build-macos-installer.sh  build_mcpb.sh  connect_claude.py  generate_icon.py  tunnel_client.py
skill/: SKILL.md  skill.json
skills/: catalog.json
static/: app.js  style.css
templates/: agents.html  (+8 more)
(+116 files in other folders)
