[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crew-bus-mcp"
version = "1.0.2"
description = "MCP server for Crew Bus — talk to your local AI agent crew"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Ryan Johnson", email = "ryanjohnsonpersonal@gmail.com"}
]
keywords = ["mcp", "agents", "crew-bus", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.20.0",
]

[project.urls]
Homepage = "https://crew-bus.dev"
Repository = "https://github.com/crew-bus/crew-bus"
Issues = "https://github.com/crew-bus/crew-bus/issues"

[project.scripts]
crew-bus-mcp = "crew_bus_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["crew_bus_mcp.py"]
